Added splash activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,21 @@
 
         <activity android:name=".ui.activity.MainActivity"
             android:theme="@style/AppTheme.AppBarOverlay">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity android:name=".ui.activity.SettingsActivity" />
 
         <activity android:name=".ui.activity.DetailsActivity"
             android:theme="@style/AppTheme.AppBarOverlay" />
+
+        <activity android:name=".ui.activity.SplashActivity"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
