Added login activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,18 @@
             android:theme="@style/AppTheme.AppBarOverlay" />
 
         <activity android:name=".ui.activity.SplashActivity"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.activity.LoginActivity"
+            android:theme="@style/AppTheme"
+            android:noHistory="true"/>
 
     </application>
 
