--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "andro.template.drawertemplate"
+        applicationId "andro.heklaton.rsc"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
