--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,15 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:allowBackup="true"
+    <application android:name="com.activeandroid.app.Application"
+        android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data android:name="AA_DB_NAME" android:value="rsc.db" />
+        <meta-data android:name="AA_DB_VERSION" android:value="2" />
 
         <activity android:name="andro.heklaton.rsc.ui.activity.MainActivity"
             android:theme="@style/AppTheme.AppBarOverlay">
