--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,47 +1,75 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="andro.heklaton.rsc">
+    package="andro.heklaton.rsc" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:name="com.activeandroid.app.Application"
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <application
+        android:name="com.activeandroid.app.Application"
         android:allowBackup="true"
-        android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="rsc.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="2" />
 
-        <meta-data android:name="AA_DB_NAME" android:value="rsc.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="2" />
-
-        <activity android:name="andro.heklaton.rsc.ui.activity.MainActivity"
-            android:theme="@style/AppTheme.AppBarOverlay">
+        <activity
+            android:name=".ui.activity.MainActivity"
+            android:theme="@style/AppTheme.AppBarOverlay" >
         </activity>
-
-        <activity android:name="andro.heklaton.rsc.ui.activity.SettingsActivity" />
-
-        <activity android:name="andro.heklaton.rsc.ui.activity.DetailsActivity"
+        <activity android:name=".ui.activity.SettingsActivity" />
+        <activity
+            android:name=".ui.activity.DetailsActivity"
             android:theme="@style/AppTheme.AppBarOverlay" />
-
-        <activity android:name="andro.heklaton.rsc.ui.activity.SplashActivity"
-            android:theme="@style/AppTheme"
-            android:noHistory="true">
+        <activity
+            android:name=".ui.activity.SplashActivity"
+            android:noHistory="true"
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="andro.heklaton.rsc.ui.activity.LoginActivity"
-            android:theme="@style/AppTheme"
+        <activity
+            android:name=".ui.activity.LoginActivity"
             android:noHistory="true"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity
+            android:name=".ui.activity.RegistrationActivity"
+            android:noHistory="true"
+            android:theme="@style/AppTheme"
             android:windowSoftInputMode="stateAlwaysHidden" />
 
-        <activity android:name=".ui.activity.RegistrationActivity"
-            android:theme="@style/AppTheme"
-            android:noHistory="true"
-            android:windowSoftInputMode="stateAlwaysHidden" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
 
+        <activity
+            android:name=".ui.activity.MapsActivity"
+            android:label="@string/title_activity_maps" >
+        </activity>
     </application>
 
 </manifest>
